fix(styles): make the fonts small enough so that longer names don't break the visuals

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   background-color: var(--color-background);
   font-family: Cairo, sans-serif;
   font-weight: bold;
-  font-size: 1.25em;
+  font-size: 1.1em;
 }
 
 @keyframes newdonation {
